tests/baselines/reference/typesWithPrivateConstructor.errors.txt
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(5,9): error TS2673: Constructor of class 'C' is private and only accessible within the class declaration.
tests/cases/conformance/types/members/typesWithPrivateConstructor.ts(13,10): error TS2673: Constructor of class 'C2' is private and only accessible within the class declaration.


==== tests/cases/conformance/types/members/typesWithPrivateConstructor.ts (2 errors) ====
    class C {
        private constructor() { }
    }
    
    var c = new C(); // error C is private
            ~~~~~~~
!!! error TS2673: Constructor of class 'C' is private and only accessible within the class declaration.
    var r: () => void = c.constructor;
    
    class C2 {
        private constructor(x: number);
        private constructor(x: any) { }
    }
    
    var c2 = new C2(); // error C2 is private
             ~~~~~~~~
!!! error TS2673: Constructor of class 'C2' is private and only accessible within the class declaration.
    var r2: (x: number) => void = c2.constructor;